# market-sim-demo

./: CMakeLists.txt  README.md
data/: market.csv
src/: Asset.cpp  Asset.h  AssetHistory.cpp  AssetHistory.h  AssetObserver.h  HistoryObserver.cpp  HistoryObserver.h  Market.cpp  Market.h  MarketInteractor.h  Portfolio.cpp  Portfolio.h  TimeDependentObject.h  TimeSeries.cpp  TimeSeries.h  Trader.cpp  Trader.h  Util.cpp  Util.h  file_handling.h  file_handling.h.in  main.cpp  vector.h
tests/: CMakeLists.txt  test_asset_history.cpp  test_trader.cpp
tests/test_io/: Market_test.csv
